// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Panel Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Panel...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
    >
      <p>
        Your main panel content is put here.
      </p>
      <p>
        Some more content over here.
      </p>
      <p>
        And one more line, just to be safe.
      </p>
    </Panel>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelDark renders 1`] = `
<Fragment>
  <h2
    id="panel-dark-mode"
  >
    Panel dark mode
  </h2>
  <p>
    Dark body with 
    <Property
      value=".panel-dark"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      darkMode={true}
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
      type="brand"
    >
      <p
        className="lead"
      >
        This is a dark panel.
      </p>
      <p>
        Your main panel content is put here.
      </p>
      <p>
        Some more content over here.
      </p>
      <p>
        And one more line, just to be safe.
      </p>
    </Panel>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelHeaders renders 1`] = `
<Fragment>
  <h2
    id="panel-headers"
  >
    Panel headers
  </h2>
  <p>
    Two types of headers... 
    <Property
      value=".panel-default"
    />
     and 
    <Property
      value=".panel-brand"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      title="Default panel"
    />
    


    <Panel
      title="Panel brand"
      type="brand"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelMuted renders 1`] = `
<Fragment>
  <h2
    id="muted-panel"
  >
    Muted panel
  </h2>
  <p>
    Muted panel with 
    <Property
      value=".panel-muted"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
      type="muted"
    >
      <p
        className="lead"
      >
        This is a muted panel.
      </p>
      <p>
        Your main panel content is put here.
      </p>
      <p>
        Some more content over here.
      </p>
      <p>
        And one more line, just to be safe.
      </p>
    </Panel>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelText renders 1`] = `
<div
  className="col-lg-10 doc-body"
>
  <p
    className="lead"
  >
    Panels...
  </p>
  <Overview />
  <PanelHeaders />
  <PanelDark />
  <PanelMuted />
</div>
`;

exports[`Documentation: Panel renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <PanelText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
